--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "identity-verification-backend",
   "version": "1.0.0",
-  "description": "Photo upload backend for identity verification (Cloudinary + persistent JSON)",
+  "description": "Cloudinary ID verification backend",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^1.41.2",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   }
 }
